--- a/src/pages/products/custom-bootstrap.scss
+++ b/src/pages/products/custom-bootstrap.scss
@@ -13,8 +13,11 @@
   border-radius: 20px;
 }
 
-.card-img-top{
-           width: "120%";
-                height: "300px";
-                object-fit: "cover";
-}
+.card-img-top {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+  border-radius: 0.5rem;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease;
+  }
